# k8s-log-collector

./: Dockerfile  ReadME.md  comm.md  postgres-postgresql-0-logs-2024-01-25T07_56_08.229954  pyproject.toml  requirements.txt  requirementstxt  script.py
src/: get_kubernetes_resource.py  initialize_clients.py  list_pods_for_resource.py  process_pod_logs.py  retrieve_and_upload_logs.py  script.py
src/tests/integration/: integration-test.py
src/tests/unit/: 1-initialize_clients.py  2-get_kubernetes_resource.py  3-list_pods_for_resource.py  4-process_pod_logs.py  5-retrieve_and_upload_logs.py  6-main.py
tests/: 1-initialize_clients.py  2-get_kubernetes_resource.py  3-list_pods_for_resource.py  4-process_pod_logs.py  5-retrieve_and_upload_logs.py  get_kubernetes_resource.py  integration-test.py  list_pods_for_resource.py  main.py  process_pod_logs.py  retrieve_and_upload_logs.py  unit-test.py
tests/integration/: integration-test.py
tests/unit/: 1-initialize_clients.py  2-get_kubernetes_resource.py  3-list_pods_for_resource.py  4-process_pod_logs.py  5-retrieve_and_upload_logs.py  6-script.py
